# calendarr

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  calendar-to-discord.py  docker-compose.example.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  slack-manifest.yml  test.py
.github/: FUNDING.yml  dependabot.yml  issue-labeler.yml
.github/ISSUE_TEMPLATE/: ❓-question---other.md  🐛-bug-report.md  🐛-bug-report.yml  🚀-feature-request.md
.github/workflows/: add-to-project.yml  codeql.yml  docker-publish.yml  issue-labeler.yml  labeler.yml
calendarr/custom_footers/: discord_footer.md  slack_footer.md
src/: app.py  calendar_processor.py  constants.py  datetime_helpers.py  general_helpers.py  main.py
src/config/: settings.py
src/models/: day.py  event.py  event_item.py  platform.py
src/services/: calendar_service.py  formatter_service.py  platform_service.py  webhook_service.py
src/utils/: date_utils.py  format_utils.py  logging_utils.py
